2005-07-06 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.9 release.

	* NEWS:  Updated for 0.15.9 release.
	* README:  Disable Script node Java support by default.
	* configure.ac:  Check for sdl-config directly rather than using
	AM_PATH_SDL.  AM_PATH_SDL is broken upstream and not fixed for
	all distributions.  This can make life difficult for users
	building from the repository.  Disable Script node Java support
	by default; this code is not 64-bit clean and needs to be
	substantially redesigned in order to be so.
	* mozilla-plugin/src/openvrml.cpp:  In order to be 64-bit clean,
	first construct a ptrdiff_t from a void* before converting it to
	a potentially smaller integral type.

2005-07-06 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(stream_reader::operator()):  Don't use char_traits<>::not_eof
	for comparison; that's not what it does.

2005-07-03 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.8 release.

	* NEWS:  Updated for 0.15.8 release.
	* configure.ac:  Use "pax" tar format.
	* doc/Doxyfile:  Updated for Doxygen 1.4.3; don't use short file
	names.
	* tests/Makefile.am:  Added clean rules for tests.

2005-06-20 Braden McDaniel  <braden@endoframe.com>

	Added openvrml::browser_event, openvrml::browser_listener.
	openvrml::browser now emits an openvrml::browser_event when
	the world is initialized and shut down.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2005-06-19 Braden McDaniel  <braden@endoframe.com>

	openvrml::vrml97_node::anchor_node doesn't need to override
	openvrml::bounded_volume_node::do_bounding_volume.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-06-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Added virtual
	destructor to image_stream_listener::image_reader.

2005-06-10 Braden McDaniel  <braden@endoframe.com>

	Fixes for gcc warnings.
