@@ -1,3 +1,10 @@
+2005-07-07 Braden McDaniel  <braden@endoframe.com>
+
+	Fixed warnings and 64-bit cleanliness issues noted by gcc 4.0.
+
+	* mozilla-plugin/lib/gtkglext/gdk/x11/gdkglquery-x11.c
+	* mozilla-plugin/src/openvrml.cpp
+
 2005-07-06 Braden McDaniel  <braden@endoframe.com>
 
 	Merged changes from 0.15.9 release.
